<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">HyperControl</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_select">SelectActivity</string>
    <string name="title_activity_plant">PlantActivity</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="title_activity_edit_plant">EditPlantActivity</string>
    <string name="title_activity_radio_select_site">RadioSelectSiteActivity</string>
    <string name="title_activity_area">AreaActivity</string>
    <string name="title_activity_sensor">SensorActivity</string>
    <string name="title_activity_client3">Client3Activity</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="title_activity_board">BoardActivity</string>
    <string name="text_btn_edit">Edit</string>
    <string name="text_btn_delete">Delete</string>
    <string name="text_btn_save">Save</string>
    <string name="text_btn_config">Setting</string>
    <string name="text_btn_login">Login</string>
    <string name="text_btn_confirm">Confirm</string>
    <string name="text_btn_cancel">Cancel</string>
    <string name="text_tog_btn_enabled">Enabled</string>
    <string name="text_tog_btn_disabled">Disabled</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_question">Do you really want to delete:</string>
    <string name="text_btn_deleted">Deleted</string>
    <string name="text_url_error">This is not a valid Http Url</string>
    <string name="text_toast_error">Select one site first</string>
    <string name="text_editfields_name">Site name</string>
    <string name="text_editfields_address">Address</string>
    <string name="text_editfields_port">Port</string>
    <string name="text_editfields_user">Username</string>
    <string name="text_editfields_psw">Password</string>
    <string name="text_editfields_uuid">Site UUID</string>
    <string name="text_setting_title">Setting</string>
    <string name="text_select_site_title">Sites List</string>
    <string name="text_login_title">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_pippo">PippoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_deveoloper">DeveloperActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="btn_conn_connected">CONNECTED</string>
    <string name="btn_conn_connecting">CONNECTING</string>
    <string name="btn_conn_offline">OFFLINE</string>

    <string-array name="choice_array">
        <item>Off</item>
        <item>Total</item>
        <item>Partial</item>
    </string-array>

    <string name="title_activity_eventi">EventiActivity</string>
    <string name="title_activity_password">PasswordActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_start_site">StartSiteActivity</string>
    <string name="title_activity_sites_list">SitesListActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_output">OutputActivity</string>
    <string name="title_activity_output_detail">OutputDetailActivity</string>

</resources>
