<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.technocontrolsystem.hypercontrol.activity.AuthActivityOld">



    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_login_title"
                android:id="@+id/textView8"
                android:layout_gravity="center_horizontal"
                android:textSize="40sp"
                android:textColor="#ff4ae02e" />

            <AutoCompleteTextView android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_username"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="text"
                android:textColor="#ff4ae02e"
                android:textColorHint="#ff4ae02e"
                android:background="@drawable/custom_editfield" />

            <EditText android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_password"
                android:imeActionId="@+id/login"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#ff4ae02e"
                android:textColorHint="#ff4ae02e"
                android:autoText="false"
                android:background="@drawable/custom_editfield" />

            <Button android:id="@+id/login_btn"
                style="?android:textAppearanceSmall"
                android:layout_gravity="center_horizontal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_btn_login"
                android:textStyle="bold"
                android:textColor="#ff4ae02e"
                android:background="@drawable/custom_button" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>



